Sleuth3: Corrected VignetteIndexEntry for chapter11-HortonMosaic.Rnw. Added "require (MASS)" to chapter12-HortonMosaic.Rnw. Changed \url{}s to \code{}s in ex0820, ex1028 and ex1029 as R CMD check complained about not being able to access those URLs. Updated inst/doc/Sleuth3-manual.pdf. Bumped version number.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/sleuth2@76 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Sleuth3/vignettes/chapter12-HortonMosaic.Rnw
+++ b/pkg/Sleuth3/vignettes/chapter12-HortonMosaic.Rnw
@@ -116,6 +116,7 @@ opts_chunk$set(
   )
 require(Sleuth3)
 require(mosaic)
+require(MASS)  ## for stepAIC
 trellis.par.set(theme=col.mosaic())  # get a better color scheme 
 set.seed(123)
 # this allows for code formatting inline.  Use \Sexpr{'function(x,y)'}, for exmaple.
